resolved the homepage overflow

--- a/src/Components/Features/Features.css
+++ b/src/Components/Features/Features.css
@@ -5,7 +5,7 @@
     height: max-content;
     top: 140%;
     display: flex;
-    flex-wrap: wrap;
+    /*    flex-wrap: wrap;*/
     gap: 30px;
     /*    border: 12px solid black background-color: pink;*/
     align-items: center;
@@ -45,8 +45,11 @@ background: linear-gradient(351deg, rgba(120,119,136,0) 0%, rgba(0,0,0,0.3715861
 
 }
 
-@media (max-width:1280px) {
+.features p {
+    text-align: center;
+}
 
+@media (max-width:1280px) {
 
 
     .featuresBox {
@@ -63,19 +66,6 @@ background: linear-gradient(351deg, rgba(120,119,136,0) 0%, rgba(0,0,0,0.3715861
 
     }
 
-    .bee {
-        order: -1;
-    }
-
-
-
-    .text {
-        margin-bottom: 30px;
-
-        h1 {
-            font-size: 40px;
-        }
-    }
 }
 
 
@@ -100,12 +90,15 @@ background: linear-gradient(351deg, rgba(120,119,136,0) 0%, rgba(0,0,0,0.3715861
 
     .featuresBox {
         /*        margin-bottom: 5rem;*/
+        flex-direction: column;
         top: 65%;
     }
 
     .features {
-        width: 85%;
-        height: 350px;
+
+        width: 200px;
+        height: 250px;
+        border-radius: 5px;
 
 
     }
