--- a/src/Pages/LandingPage/LandingPage.css
+++ b/src/Pages/LandingPage/LandingPage.css
@@ -7,12 +7,11 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    overflow: hidden;
     /*    background: url('../../assets/Images/Home-bg');*/
     background-size: cover;
     background-position: center;
     overflow-x: hidden;
-    border: 2px solid red;
+    /*    border: 2px solid red;*/
 
 
 }
