--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,6 @@
 body,
 html {
     overflow-x: hidden;
+    max-width: 100vw;
+    background-color: green;
 }
